[package]
name = "ttt-limited"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.13", features = ["csr", "nightly"] }
postcard = { version = "1.0.8", features = ["use-std"] }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
serde = { version = "1.0.206", features = ["derive", "std", "alloc", "rc"] }
wasm-bindgen-futures = "0.4.43"
[dependencies.web-sys]
version = "0.3.69"
features = [
  "Window",
  "Crypto",
]
